--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@react-native-async-storage/async-storage": "1.21.0",
     "react-native-get-random-values": "~1.10.0",
     "expo-notifications": "~0.27.6",
-    "expo-contacts": "~12.8.2"
+    "expo-permissions": "~14.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
