--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,14 +18,14 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18'
+          # استخدام الكاش المدمج بدلاً من المسح اليدوي لتوفير الوقت والمساحة
+          cache: 'npm'
 
-      - name: 3. Nuclear Reset and Install
+      - name: 3. Install Dependencies
         run: |
-          echo "Cleaning environment for Oasis..."
-          rm -rf node_modules package-lock.json
-          npm cache clean --force
-          echo "Installing dependencies with legacy-peer-deps..."
-          # استخدام --legacy-peer-deps أساسي هنا لدمج ZegoCloud مع Expo
+          echo "Installing dependencies for Oasis..."
+          # تم حذف npm cache clean و rm -rf لتجنب استهلاك موارد القرص
+          # --legacy-peer-deps ضرورية جداً لمشاكل التوافق في Expo
           npm install --legacy-peer-deps
 
       - name: 4. Setup EAS CLI
@@ -36,10 +36,16 @@ jobs:
 
       - name: 5. Build Android APK
         run: |
-          eas build --platform android --profile preview --local
+          # إضافة --non-interactive لمنع توقف البناء بانتظار إدخال يدوي
+          # تنبيه: البناء المحلي (--local) قد يفشل إذا نفدت ذاكرة الخادم (RAM)
+          eas build --platform android --profile preview --local --non-interactive
 
       - name: 6. Upload Final APK
+        if: always() # لضمان محاولة رفع الملف حتى لو فشلت الخطوات جزئياً
         uses: actions/upload-artifact@v4
         with:
           name: Oasis-App-APK
-          path: ./*.apk
+          # استخدام النجمة المزدوجة للبحث في كل المجلدات لأن EAS قد يغير مسار المخرج
+          path: "**/*.apk"
+          # في حال لم يجد ملف APK، لن يفشل الـ Workflow بالكامل
+          if-no-files-found: warn
