--- a/app.json
+++ b/app.json
@@ -19,22 +19,23 @@
         "cameraPermission": "يسمح لك التطبيق باستخدام الكاميرا."
       }],
       ["expo-av", { "microphonePermission": "نحتاج للوصول للميكروفون." }],
-      ["@zegocloud/zego-uikit-prebuilt-call-rn", {
-        "ringtone": "ringtone.mp3" 
-      }],
-      ["@zegocloud/zego-uikit-signaling-plugin-rn", {
-        "android": { "permission": "POST_NOTIFICATIONS" }
-      }]
+      "@zegocloud/zego-uikit-prebuilt-call-rn",
+      "@zegocloud/zego-uikit-signaling-plugin-rn"
     ],
     "android": {
       "package": "com.oasis.app2026",
       "googleServicesFile": "./google-services.json",
       "permissions": [
-        "CAMERA", "RECORD_AUDIO", "MODIFY_AUDIO_SETTINGS", "ACCESS_WIFI_STATE",
-        "ACCESS_NETWORK_STATE", "USE_FULL_SCREEN_INTENT", "SCHEDULE_EXACT_ALARM",
-        "VIBRATE", "FOREGROUND_SERVICE", "WAKE_LOCK", "DISABLE_KEYGUARD",
-        "INTERNET", "SYSTEM_ALERT_WINDOW", "POST_NOTIFICATIONS", "READ_PHONE_STATE"
-      ]
+        "CAMERA", 
+        "RECORD_AUDIO", 
+        "MODIFY_AUDIO_SETTINGS", 
+        "ACCESS_WIFI_STATE",
+        "ACCESS_NETWORK_STATE", 
+        "INTERNET", 
+        "POST_NOTIFICATIONS",
+        "WAKE_LOCK"
+      ],
+      "blockControlPanel": true
     },
     "ios": {
       "supportsTablet": true,
