--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-Name: Oasis App Build
+name: Oasis App Build
 
 on:
   push:
@@ -17,15 +17,14 @@ jobs:
       - name: 2. Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20' # تحديث بسيط للنسخة لسرعة الأداء
+          node-version: '20'
 
       - name: 3. Nuclear Install and Fix
         run: |
-          echo "Resolving dependency conflicts and injecting crypto-js..."
-          # التثبيت بقوة لضمان دمج سلك التشفير والمكالمات
+          echo "Resolving dependency conflicts..."
+          # استخدام الأحرف الصغيرة وتثبيت المكتبات الأساسية
           npm install --legacy-peer-deps --force
-          # التأكد من تثبيت مكتبة الأيقونات لضمان ظهور أزرار المكالمات
-          npx expo install @expo/vector-icons -- --legacy-peer-deps --force
+          npx expo install --fix
 
       - name: 4. Setup EAS CLI
         uses: expo/expo-github-action@v8
@@ -33,13 +32,7 @@ jobs:
           eas-version: latest
           token: ${{ secrets.EXPO_TOKEN }}
 
-      - name: 5. Pre-Build Check
+      - name: 5. Build on Expo Cloud
         run: |
-          # التأكد من وجود ملفات الأصول لكي لا يفشل البناء (الرنة والأيقونات)
-          ls assets/ringtone.mp3 || echo "Warning: Ringtone missing"
-          ls assets/icon.png || echo "Warning: Icon missing"
-
-      - name: 6. Build on Expo Cloud
-        run: |
-          # البناء بصيغة APK (profile preview) للتحميل المباشر
+          # التأكد من أن الملفات الضرورية مرفوعة قبل البدء
           eas build --platform android --profile preview --non-interactive
