--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,13 +18,20 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
+          cache: 'npm'
 
-      - name: 3. Nuclear Install and Fix
+      - name: 3. Nuclear Dependency Resolution
         run: |
-          echo "Resolving dependency conflicts forcing install..."
-          # استخدام --legacy-peer-deps يحل تعارض مكتبات ZegoCloud الظاهر في الصورة
+          echo "Cleaning environment and forcing installation..."
+          # حذف ملف lock لضمان عدم وجود قيود قديمة
+          rm -f package-lock.json
+          
+          # تثبيت المكتبات مع تجاهل تام لتضارب الـ Peer Dependencies
           npm install --legacy-peer-deps --force
-          npx expo install --fix
+          
+          # تجنب استخدام expo install --fix لأنه هو من يعيد التضارب
+          # بدلاً من ذلك، نثبت الأيقونات مباشرة
+          npm install @expo/vector-icons --legacy-peer-deps --force
 
       - name: 4. Setup EAS CLI
         uses: expo/expo-github-action@v8
@@ -34,5 +41,5 @@ jobs:
 
       - name: 5. Build on Expo Cloud
         run: |
-          # البدء بالبناء السحابي لإنتاج ملف APK
+          # الرفع للبناء مع تجاوز فحص الصلاحية المحلي (لأن EAS سيعيد التثبيت سحابياً)
           eas build --platform android --profile preview --non-interactive
