--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,12 +19,9 @@ jobs:
         with:
           node-version: '20'
 
-      - name: 3. Force Clean Slate
-        run: |
-          echo "جاري حذف أي مخلفات قديمة من المحاولات السابقة..."
-          rm -rf node_modules
-          rm -f package-lock.json
-          npm cache clean --force
+      - name: 3. Prepare Assets
+        # بما أن مجلد assets في الخارج، سنقوم بنسخه داخل مجلد mobile ليراه التطبيق
+        run: cp -r assets mobile/assets
 
       - name: 4. Setup EAS CLI
         uses: expo/expo-github-action@v8
@@ -32,7 +29,13 @@ jobs:
           eas-version: latest
           token: ${{ secrets.EXPO_TOKEN }}
 
-      - name: 5. Build on Expo Cloud (Direct Fresh Upload)
+      - name: 5. Build from Mobile Folder
+        # هذا هو التعديل الأهم: إخبار النظام بالدخول لمجلد mobile
+        working-directory: mobile
         run: |
-          # الإضافة هنا: أضفنا --clear-cache لضمان تجاهل أي ملفات قديمة فاشلة
+          echo "Starting fresh build for Oasis App..."
+          # حذف أي مخلفات داخل المجلد إذا وجدت
+          rm -rf node_modules
+          rm -f package-lock.json
+          # بناء التطبيق مع مسح الكاش تماماً
           eas build --platform android --profile preview --non-interactive --no-wait --clear-cache
