--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,7 @@ jobs:
           node-version: '20'
 
       - name: 3. Prepare Assets
+        # يضمن وجود الصور داخل مجلد التطبيق قبل البناء
         run: cp -r assets mobile/assets
 
       - name: 4. Setup EAS CLI
@@ -31,9 +32,12 @@ jobs:
       - name: 5. Install Dependencies & Build
         working-directory: mobile
         run: |
-          # الحل هنا: تثبيت الإضافات المطلوبة يدوياً لضمان وجودها
-          npm install
+          echo "جاري حل تعارض المكتبات وتثبيت الإضافات..."
+          # استخدام --legacy-peer-deps هو الحل السحري لخطأ ERESOLVE في صورتك الأخيرة
+          npm install --legacy-peer-deps
+          
+          # تثبيت إضافات التنبيهات الضرورية
           npx expo install expo-notifications expo-device expo-constants
           
-          echo "Starting build with all plugins resolved..."
+          echo "Starting build on Expo Cloud..."
           eas build --platform android --profile preview --non-interactive --no-wait --clear-cache
