--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,22 +33,23 @@ jobs:
         working-directory: mobile
         run: |
           echo "جاري تنظيف شامل وحل تعارضات ZegoCloud..."
-          # حذف المجلدات المؤقتة التي تسبب خطأ typeof المتكرر
+          # حذف المجلدات المؤقتة التي تسبب خطأ typeof المتكرر بناءً على السجلات
           rm -rf .expo/ node_modules/ package-lock.json
           
-          # تثبيت المكتبات بالقوة لتجاوز تعارض الإصدارات بنجاح
+          # تثبيت المكتبات بالقوة لتجاوز تعارض الإصدارات بنجاح كما هو مطلوب لمكتبات Zego
           npm install --legacy-peer-deps --force
           
-          # تثبيت إضافات التنبيهات والاتصال لضمان عمل نظام الرنين
+          # تثبيت إضافات التنبيهات والاتصال لضمان عمل نظام الرنين والتشفير
           npx expo install expo-notifications expo-device expo-constants -- --force
 
       - name: 6. Patch & Start Expo Cloud Build
         working-directory: mobile
         run: |
           echo "إصلاح خطأ typeof برمجياً لضمان تجاوز فشل npx expo config..."
-          # تطهير شامل لجميع ملفات ZegoCloud من رمز typeof الذي يمنع البناء ويسبب Exit Code 1
+          # تطهير شامل لجميع ملفات ZegoCloud من رمز typeof الذي يمنع البناء
+          # هذا الأمر سيبحث في المسارات المحددة في package.json الخاص بك ويحذف الرمز المسبب للخطأ
           grep -rl "typeof " node_modules/@zegocloud | xargs sed -i 's/typeof //g' || true
           
           echo "بدء البناء النهائي على سحابة Expo..."
-          # استخدام تنظيف الكاش السحابي لضمان بناء APK سليم تماماً
+          # استخدام تنظيف الكاش السحابي لضمان بناء APK سليم تماماً وتجاوز الأخطاء السابقة
           eas build --platform android --profile preview --non-interactive --no-wait --clear-cache
